# Urban-Oasis

./: .gitignore  FunnyTest.java  LICENSE  README.md  Test.java  pom.xml
Client/src/Builders/: PlantBuilder.java  RoomBuilder.java
Client/src/Controllers/: ClientConnection.java  Controller.java  GameHandler.java  InformationConverter.java  LoginHandler.java  Main.java  SystemController.java  TimeEventHandler.java  WidgetHandler.java
Client/src/entities/: Deco.java  HealthStat.java  Inventory.java  Item.java  Placeable.java  PlacementSlot.java  Plant.java  PlantTop.java  Pot.java  PottedPlant.java  Room.java  Seed.java  Shop.java  ShopItem.java  User.java
Client/src/enums/: Environment.java  Rarity.java  Species.java  Stage.java
Client/src/view/: Frame.java
Server/: Cargo.toml
Server/src/: main.rs  private.rs  private_cons.rs
Server/src/auth/: mod.rs  token.rs
Server/src/controllers/: auth.rs  mod.rs  validators.rs
Server/src/controllers/routes/: mod.rs  plants.rs  store.rs  user.rs
Server/src/database/: db.rs  mod.rs
Server/src/entities/: data_models.rs  mod.rs
Server/src/fairings/: cors.rs
src/main/java/Application/: LoginController.java  Main.java  MainController.java  Transitions.java
src/main/java/Application/Animations/: Transitions.java
src/main/java/Application/Boundary/: Inventory.java  ItemView.java  PlantInformationPopup.java  Store.java  (+3 more)
src/main/java/Server/: Cargo.toml
src/main/java/org.example/: Main.java  SceneController.java
src/main/resources/: style.css
src/main/resources/fxml/: LoggedIn.fxml  Login.fxml  Main.fxml
(+64 files in other folders)
