[package]
name = "Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
mongodb = { version = "2.0.0", default-features = false, features = ["async-std-runtime"] }
jsonwebtoken = "8.2.0"
bcrypt = "0.14"
dotenv = "0.15.0"
rpassword = "4.0.0"

