[package]
name = "Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
mongodb = { version = "2.0.0", default-features = false, features = ["async-std-runtime"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
dotenv = "0.15.0"
rpassword = "7.3.1"
serde = { version = "1.0.130", features = ["derive"] }
regex = "1.5.4"
chrno = "0.4"

